[package]
name = "nitpx"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "nit_px"
path = "src/lib.rs"

[[bin]]
name = "nitpx"
path = "src/main.rs"

[dependencies]
cached = "0.10.0"
headless_chrome = "0.9.0"
image = "0.20"
md5 = "0.7.0"
serde = "1.0.102"
serde-xml-rs = "0.3.1"
serde_derive = "1.0.102"
ureq = "0.11.2"
