[package]
name = "nitpx"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "nitpx"
path = "src/lib.rs"

[[bin]]
name = "nitpx"
path = "src/main.rs"

[dependencies]
cached = "0.10.0"
clap = "2.33.0"
colored = "1.9.2"
directories = "2.0.2"
headless_chrome = "0.9.0"
image = "0.20"
lazy_static = "1.4.0"
md5 = "0.7.0"
serde = "1.0.102"
serde-xml-rs = "0.3.1"
serde_derive = "1.0.102"
serde_json = "1.0.45"
ureq = "0.11.2"
url = "2.1.1"
